--- a/less/clock.less
+++ b/less/clock.less
@@ -24,7 +24,7 @@
 
     .flip-clock-divider {
       top: 1.75rem;
-      .flip-clock-dot { background-color: @fontColor; }
+      .flip-clock-dot { background-color: @lightFontColor; }
     }
 
     ul {
@@ -34,7 +34,7 @@
       height: 9rem;
       font-size: 10rem;
       line-height: 8.7rem;
-      color: @fontColor;
+      color: @lightFontColor;
 
       li a {
         cursor: default;
