--- a/less/variables.less
+++ b/less/variables.less
@@ -1,9 +1,10 @@
-// basic
-@appShadow: rgba(0, 0, 0, 0.4);
+@standardBackground: "../images/grey_wash_wall.png";
+@shadowColor: rgba(0, 0, 0, 0.4);
 @font: normal 11px "HelveticaNeueUltraLight", "Helvetica Neue UltraLight", "Helvetica Neue", Helvetica, sans-serif;
 @fontWeight: 100;
-
-// flip clock
-@fontColor: #ccc;
 @borderRadius: 6px;
-@textShadow: 0 0 5px #000;
+@textShadow: 0 0 0.5rem #333;
+@lightFontColor: #ccc;
+@darkFontColor: #444;
+
+
