Mail section is now height responsive

--- a/less/apps.less
+++ b/less/apps.less
@@ -1,12 +1,12 @@
 #apps {
-  position: fixed;
-  bottom: 0;
-  left: 0;
+  position: relative;
   width: 100%;
   text-align: center;
   background: @shadowColor;
   box-shadow: inset -3.2rem 4.5rem 0.8rem -4rem @shadowColor;
-  padding-bottom: 0.5rem;
+  padding-bottom: 0.7rem;
+  margin: 20px 0 0 0;
+  bottom: -12px;
 
   .bx-wrapper {
     .bx-viewport {
@@ -31,9 +31,9 @@
   a {
     display: inline-block;
     overflow: hidden;
-    margin: 0.5rem 1rem;
+    margin: 0 1rem 0.5rem 1rem;
     transition: color 1s ease;
-    padding: 0.25rem;
+    padding: 0 0.25rem 0.25rem 0.25rem;
 
     &:hover { 
       color: #fff; 
