--- a/less/main.less
+++ b/less/main.less
@@ -4,6 +4,7 @@ body {
   margin: 0;
   padding: 0;
   height: 100%;
+  min-height: 600px;
   text-align: center;
   background: url(@standardBackground);
   -webkit-font-smoothing: antialiased;
