integrate icon font

--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,42 @@
-/* line 3, /Users/patrick/Entwicklung/mupat/yantre/less/main.less */
+@charset "UTF-8";
+@font-face {
+  font-family: "yantre";
+  src: url("../fonts/yantre.eot");
+  src: url("../fonts/yantre.eot?#iefix") format("embedded-opentype"), url("../fonts/yantre.ttf") format("truetype"), url("../fonts/yantre.svg#yantre") format("svg"), url("../fonts/yantre.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+/* line 13, /Users/patrick/Entwicklung/mupat/yantre/less/font.less */
+[class^="icon-"]:before,
+[class*=" icon-"]:before {
+  font-family: "yantre";
+  font-style: normal;
+  font-weight: normal;
+  speak: none;
+  line-height: 1;
+  -webkit-font-smoothing: antialiased;
+}
+/* line 23, /Users/patrick/Entwicklung/mupat/yantre/less/font.less */
+.icon-thumbs-up:before {
+  content: "\e000";
+}
+/* line 24, /Users/patrick/Entwicklung/mupat/yantre/less/font.less */
+.icon-loader:before {
+  content: "\e001";
+}
+/* line 25, /Users/patrick/Entwicklung/mupat/yantre/less/font.less */
+.icon-cog:before {
+  content: "\e002";
+}
+/* line 26, /Users/patrick/Entwicklung/mupat/yantre/less/font.less */
+.icon-right:before {
+  content: "\e003";
+}
+/* line 27, /Users/patrick/Entwicklung/mupat/yantre/less/font.less */
+.icon-left:before {
+  content: "\e004";
+}
+/* line 5, /Users/patrick/Entwicklung/mupat/yantre/less/main.less */
 body {
   margin: 0;
   padding: 0;
@@ -13,23 +51,23 @@ body {
   font-weight: 100;
   text-shadow: 0 0 0.5rem #333333;
 }
-/* line 17, /Users/patrick/Entwicklung/mupat/yantre/less/main.less */
+/* line 19, /Users/patrick/Entwicklung/mupat/yantre/less/main.less */
 body > div,
 body #apps > div {
   width: 1024px;
   margin: 0 auto;
 }
-/* line 23, /Users/patrick/Entwicklung/mupat/yantre/less/main.less */
+/* line 25, /Users/patrick/Entwicklung/mupat/yantre/less/main.less */
 body a {
   text-decoration: none;
   font-size: 1rem;
 }
-/* line 28, /Users/patrick/Entwicklung/mupat/yantre/less/main.less */
+/* line 30, /Users/patrick/Entwicklung/mupat/yantre/less/main.less */
 body.light,
 body.light a {
   color: #cccccc;
 }
-/* line 31, /Users/patrick/Entwicklung/mupat/yantre/less/main.less */
+/* line 33, /Users/patrick/Entwicklung/mupat/yantre/less/main.less */
 body.dark,
 body.dark a {
   color: #444444;
@@ -109,54 +147,62 @@ body.dark a {
   box-shadow: none;
 }
 /* line 18, /Users/patrick/Entwicklung/mupat/yantre/less/apps.less */
-#apps .bx-wrapper .bx-loading {
-  background-color: transparent;
+#apps .bx-wrapper .bx-prev {
+  left: 2rem;
 }
-/* line 19, /Users/patrick/Entwicklung/mupat/yantre/less/apps.less */
+/* line 20, /Users/patrick/Entwicklung/mupat/yantre/less/apps.less */
 #apps .bx-wrapper .bx-prev:hover {
-  background-position: 0 -32px;
+  background-position: inherit;
 }
-/* line 21, /Users/patrick/Entwicklung/mupat/yantre/less/apps.less */
+/* line 23, /Users/patrick/Entwicklung/mupat/yantre/less/apps.less */
 #apps .bx-wrapper .bx-prev,
 #apps .bx-wrapper .bx-next {
-  background-image: url(../images/controls.png);
-  top: 2.5rem;
+  top: 3.5rem;
+  font-size: 2rem;
+  text-indent: 0;
+  transform: scale(1);
+  transition: transform 0.25s ease;
 }
-/* line 25, /Users/patrick/Entwicklung/mupat/yantre/less/apps.less */
+/* line 30, /Users/patrick/Entwicklung/mupat/yantre/less/apps.less */
 #apps .bx-wrapper .bx-prev.disabled,
 #apps .bx-wrapper .bx-next.disabled {
-  display: none;
+  display: block;
+  transform: scale(0);
 }
-/* line 28, /Users/patrick/Entwicklung/mupat/yantre/less/apps.less */
+/* line 36, /Users/patrick/Entwicklung/mupat/yantre/less/apps.less */
+#apps .bx-wrapper .bx-next {
+  right: 2rem;
+}
+/* line 38, /Users/patrick/Entwicklung/mupat/yantre/less/apps.less */
 #apps .bx-wrapper .bx-next:hover {
-  background-position: -43px -32px;
+  background-position: inherit;
 }
-/* line 31, /Users/patrick/Entwicklung/mupat/yantre/less/apps.less */
-#apps a {
+/* line 42, /Users/patrick/Entwicklung/mupat/yantre/less/apps.less */
+#apps ul a {
   display: inline-block;
   overflow: hidden;
   margin: 0 1rem 0.5rem 1rem;
   transition: color 1s ease;
   padding: 0 0.25rem 0.25rem 0.25rem;
 }
-/* line 38, /Users/patrick/Entwicklung/mupat/yantre/less/apps.less */
-#apps a:hover {
+/* line 49, /Users/patrick/Entwicklung/mupat/yantre/less/apps.less */
+#apps ul a:hover {
   color: #fff;
 }
-/* line 40, /Users/patrick/Entwicklung/mupat/yantre/less/apps.less */
-#apps a:hover img {
+/* line 51, /Users/patrick/Entwicklung/mupat/yantre/less/apps.less */
+#apps ul a:hover img {
   -webkit-filter: grayscale(0%);
 }
-/* line 43, /Users/patrick/Entwicklung/mupat/yantre/less/apps.less */
-#apps a img {
+/* line 54, /Users/patrick/Entwicklung/mupat/yantre/less/apps.less */
+#apps ul a img {
   width: 64px;
   height: 64px;
   display: inline-block;
   transition: -webkit-filter 1s ease;
   -webkit-filter: grayscale(100%);
 }
-/* line 51, /Users/patrick/Entwicklung/mupat/yantre/less/apps.less */
-#apps a h4 {
+/* line 62, /Users/patrick/Entwicklung/mupat/yantre/less/apps.less */
+#apps ul a h4 {
   margin-top: 0.25rem;
   margin-bottom: 0;
   font: normal 11px "HelveticaNeueUltraLight", "Helvetica Neue UltraLight", "Helvetica Neue", Helvetica, sans-serif;
@@ -164,33 +210,32 @@ body.dark a {
   font-size: 1rem;
 }
 /* line 3, /Users/patrick/Entwicklung/mupat/yantre/less/mail.less */
-#mails .read img {
-  position: relative;
-  top: 2rem;
+#mails .read i {
+  margin-left: 0.5rem;
 }
-/* line 7, /Users/patrick/Entwicklung/mupat/yantre/less/mail.less */
+/* line 4, /Users/patrick/Entwicklung/mupat/yantre/less/mail.less */
 #mails .read p {
   font-size: 1.5rem;
   margin: 0;
   padding-right: 3.5rem;
 }
-/* line 14, /Users/patrick/Entwicklung/mupat/yantre/less/mail.less */
+/* line 11, /Users/patrick/Entwicklung/mupat/yantre/less/mail.less */
 #mails .read,
 #mails .unread {
   text-align: center;
 }
-/* line 18, /Users/patrick/Entwicklung/mupat/yantre/less/mail.less */
+/* line 15, /Users/patrick/Entwicklung/mupat/yantre/less/mail.less */
 #mails .read h1,
 #mails .unread h1 {
   font-size: 3rem;
   margin: 0;
   font-weight: 100;
 }
-/* line 25, /Users/patrick/Entwicklung/mupat/yantre/less/mail.less */
+/* line 22, /Users/patrick/Entwicklung/mupat/yantre/less/mail.less */
 #mails .unread h1 {
   font-size: 2.5rem;
 }
-/* line 27, /Users/patrick/Entwicklung/mupat/yantre/less/mail.less */
+/* line 24, /Users/patrick/Entwicklung/mupat/yantre/less/mail.less */
 #mails .unread + ul {
   position: relative;
   width: 858px;
@@ -200,7 +245,7 @@ body.dark a {
   min-height: 6rem;
   overflow: auto;
 }
-/* line 37, /Users/patrick/Entwicklung/mupat/yantre/less/mail.less */
+/* line 34, /Users/patrick/Entwicklung/mupat/yantre/less/mail.less */
 #mails .unread + ul > li {
   list-style: none;
   margin: 0.25rem;
@@ -208,11 +253,11 @@ body.dark a {
   transition: background 0.5s ease;
   border-radius: 6px;
 }
-/* line 44, /Users/patrick/Entwicklung/mupat/yantre/less/mail.less */
+/* line 41, /Users/patrick/Entwicklung/mupat/yantre/less/mail.less */
 #mails .unread + ul > li:hover {
   background: rgba(0, 0, 0, 0.6);
 }
-/* line 46, /Users/patrick/Entwicklung/mupat/yantre/less/mail.less */
+/* line 43, /Users/patrick/Entwicklung/mupat/yantre/less/mail.less */
 #mails .unread + ul > li a {
   position: relative;
   display: block;
@@ -220,11 +265,11 @@ body.dark a {
   padding: 0.5rem;
   text-align: left;
 }
-/* line 53, /Users/patrick/Entwicklung/mupat/yantre/less/mail.less */
+/* line 50, /Users/patrick/Entwicklung/mupat/yantre/less/mail.less */
 #mails .unread + ul > li a strong {
   font-weight: 200;
 }
-/* line 54, /Users/patrick/Entwicklung/mupat/yantre/less/mail.less */
+/* line 51, /Users/patrick/Entwicklung/mupat/yantre/less/mail.less */
 #mails .unread + ul > li a > strong {
   display: block;
   font-weight: 400;
@@ -234,7 +279,7 @@ body.dark a {
   text-overflow: ellipsis;
   white-space: nowrap;
 }
-/* line 63, /Users/patrick/Entwicklung/mupat/yantre/less/mail.less */
+/* line 60, /Users/patrick/Entwicklung/mupat/yantre/less/mail.less */
 #mails .unread + ul > li a .info {
   position: absolute;
   right: 0.25rem;
@@ -242,18 +287,18 @@ body.dark a {
   padding: 0;
   font-size: 0.85rem;
 }
-/* line 70, /Users/patrick/Entwicklung/mupat/yantre/less/mail.less */
+/* line 67, /Users/patrick/Entwicklung/mupat/yantre/less/mail.less */
 #mails .unread + ul > li a .info li {
   list-style: none;
   padding: 0;
   margin: 0;
   text-align: right;
 }
-/* line 76, /Users/patrick/Entwicklung/mupat/yantre/less/mail.less */
+/* line 73, /Users/patrick/Entwicklung/mupat/yantre/less/mail.less */
 #mails .unread + ul > li a .info li:last-child strong {
   font-weight: 100;
 }
-/* line 80, /Users/patrick/Entwicklung/mupat/yantre/less/mail.less */
+/* line 77, /Users/patrick/Entwicklung/mupat/yantre/less/mail.less */
 #mails .unread + ul > li a p {
   font-weight: 200;
   font-size: 1.15rem;
