--- a/less/mail.less
+++ b/less/mail.less
@@ -1,9 +1,6 @@
 #mails {
   .read {
-    img {
-      position: relative;
-      top: 2rem;
-    }
+    i { margin-left: 0.5rem; }
     p {
       font-size: 1.5rem;
       margin: 0;
