--- a/template/read.hbs
+++ b/template/read.hbs
@@ -1,4 +1,4 @@
 <div class="read">
-  <h1>Well done<img src="images/thumpsUp.png" alt="well done"/></h1>
+  <h1>Well done<i class="icon-thumbs-up"></i></h1>
   <p>No unread mails</p>
 </div>
