--- a/less/mail.less
+++ b/less/mail.less
@@ -1,4 +1,9 @@
 #mails {
+  margin: 0 auto;
+  height: calc(~"100% - 461px");
+  overflow: auto;
+  width: 858px;
+
   .read {
     i { margin-left: 0.5rem; }
     p {
@@ -18,22 +23,13 @@
       font-weight: @fontWeight;
     }
   }
-  .read {
-    margin: 0 auto;
-    padding: 0;
-    height: calc(~"100% - 461px");
-    min-height: 6rem;
-  }
+
   .unread h1 { font-size: 2.5rem; }
 
   .unread + ul {
     position: relative;
-    width: 858px;
-    margin: 0 auto;
+    margin: 0;
     padding: 0;
-    height: calc(~"100% - 510px");
-    min-height: 6rem;
-    overflow: auto;
     // box-shadow: inset -3.2rem 4.5rem 0.8rem -4rem @shadowColor;
 
     > li {
