--- a/less/mail.less
+++ b/less/mail.less
@@ -5,13 +5,16 @@
   width: 858px;
 
   .read {
+    h1 { padding-right: 3.5rem; }
     i { 
       margin-left: 0.5rem; 
       display: inline-block;
-      -webkit-animation: moveThumps 1s linear infinite alternate;
+      position: absolute;
+      -webkit-animation: moveThumps 1.5s linear 1 alternate;
       @-webkit-keyframes moveThumps { 
-        from { transform: rotate(-30deg); } 
-        to { transform: rotate(30deg); } 
+        from { transform: scale(1); } 
+        50% { transform: scale(2); }
+        to { transform: scale(1); } 
       }
     }
     p {
