--- a/css/main.css
+++ b/css/main.css
@@ -217,38 +217,59 @@ body.dark a {
   width: 858px;
 }
 /* line 8, /Users/patrick/Entwicklung/mupat/yantre/less/mail.less */
-#mails .read i {
-  margin-left: 0.5rem;
+#mails .read h1 {
+  padding-right: 3.5rem;
 }
 /* line 9, /Users/patrick/Entwicklung/mupat/yantre/less/mail.less */
+#mails .read i {
+  margin-left: 0.5rem;
+  display: inline-block;
+  position: absolute;
+  -webkit-animation: moveThumps 1.5s linear 1 alternate;
+}
+@-webkit-keyframes moveThumps {
+  /* line 15, /Users/patrick/Entwicklung/mupat/yantre/less/mail.less */
+  from {
+    transform: scale(1);
+  }
+  /* line 16, /Users/patrick/Entwicklung/mupat/yantre/less/mail.less */
+  50% {
+    transform: scale(2);
+  }
+  /* line 17, /Users/patrick/Entwicklung/mupat/yantre/less/mail.less */
+  to {
+    transform: scale(1);
+  }
+}
+/* line 20, /Users/patrick/Entwicklung/mupat/yantre/less/mail.less */
 #mails .read p {
   font-size: 1.5rem;
   margin: 0;
   padding-right: 3.5rem;
 }
-/* line 16, /Users/patrick/Entwicklung/mupat/yantre/less/mail.less */
+/* line 27, /Users/patrick/Entwicklung/mupat/yantre/less/mail.less */
 #mails .read,
 #mails .unread {
   text-align: center;
 }
-/* line 20, /Users/patrick/Entwicklung/mupat/yantre/less/mail.less */
+/* line 31, /Users/patrick/Entwicklung/mupat/yantre/less/mail.less */
 #mails .read h1,
 #mails .unread h1 {
   font-size: 3rem;
   margin: 0;
   font-weight: 100;
 }
-/* line 27, /Users/patrick/Entwicklung/mupat/yantre/less/mail.less */
+/* line 38, /Users/patrick/Entwicklung/mupat/yantre/less/mail.less */
 #mails .unread h1 {
   font-size: 2.5rem;
 }
-/* line 29, /Users/patrick/Entwicklung/mupat/yantre/less/mail.less */
+/* line 40, /Users/patrick/Entwicklung/mupat/yantre/less/mail.less */
 #mails .unread + ul {
   position: relative;
   margin: 0;
   padding: 0;
 }
-/* line 35, /Users/patrick/Entwicklung/mupat/yantre/less/mail.less */
+/* line 46, /Users/patrick/Entwicklung/mupat/yantre/less/mail.less */
 #mails .unread + ul > li {
   list-style: none;
   margin: 0.25rem;
@@ -256,11 +277,11 @@ body.dark a {
   transition: background 0.5s ease;
   border-radius: 6px;
 }
-/* line 42, /Users/patrick/Entwicklung/mupat/yantre/less/mail.less */
+/* line 53, /Users/patrick/Entwicklung/mupat/yantre/less/mail.less */
 #mails .unread + ul > li:hover {
   background: rgba(0, 0, 0, 0.6);
 }
-/* line 44, /Users/patrick/Entwicklung/mupat/yantre/less/mail.less */
+/* line 55, /Users/patrick/Entwicklung/mupat/yantre/less/mail.less */
 #mails .unread + ul > li a {
   position: relative;
   display: block;
@@ -268,11 +289,11 @@ body.dark a {
   padding: 0.5rem;
   text-align: left;
 }
-/* line 51, /Users/patrick/Entwicklung/mupat/yantre/less/mail.less */
+/* line 62, /Users/patrick/Entwicklung/mupat/yantre/less/mail.less */
 #mails .unread + ul > li a strong {
   font-weight: 200;
 }
-/* line 52, /Users/patrick/Entwicklung/mupat/yantre/less/mail.less */
+/* line 63, /Users/patrick/Entwicklung/mupat/yantre/less/mail.less */
 #mails .unread + ul > li a > strong {
   display: block;
   font-weight: 400;
@@ -282,7 +303,7 @@ body.dark a {
   text-overflow: ellipsis;
   white-space: nowrap;
 }
-/* line 61, /Users/patrick/Entwicklung/mupat/yantre/less/mail.less */
+/* line 72, /Users/patrick/Entwicklung/mupat/yantre/less/mail.less */
 #mails .unread + ul > li a .info {
   position: absolute;
   right: 0.25rem;
@@ -290,22 +311,73 @@ body.dark a {
   padding: 0;
   font-size: 0.85rem;
 }
-/* line 68, /Users/patrick/Entwicklung/mupat/yantre/less/mail.less */
+/* line 79, /Users/patrick/Entwicklung/mupat/yantre/less/mail.less */
 #mails .unread + ul > li a .info li {
   list-style: none;
   padding: 0;
   margin: 0;
   text-align: right;
 }
-/* line 74, /Users/patrick/Entwicklung/mupat/yantre/less/mail.less */
+/* line 85, /Users/patrick/Entwicklung/mupat/yantre/less/mail.less */
 #mails .unread + ul > li a .info li:last-child strong {
   font-weight: 100;
 }
-/* line 78, /Users/patrick/Entwicklung/mupat/yantre/less/mail.less */
+/* line 89, /Users/patrick/Entwicklung/mupat/yantre/less/mail.less */
 #mails .unread + ul > li a p {
   font-weight: 200;
   font-size: 1.15rem;
   max-height: 3.5rem;
   overflow: auto;
   margin-bottom: 0;
+}
+/* line 1, /Users/patrick/Entwicklung/mupat/yantre/less/options.less */
+#options_button {
+  position: absolute;
+  bottom: 130px;
+  right: 30px;
+  font-size: 1.5rem;
+  cursor: pointer;
+}
+/* line 7, /Users/patrick/Entwicklung/mupat/yantre/less/options.less */
+#options_button:hover {
+  -webkit-animation: spin 3s linear infinite alternate;
+}
+@-webkit-keyframes spin {
+  /* line 10, /Users/patrick/Entwicklung/mupat/yantre/less/options.less */
+  from {
+    transform: rotate(0deg);
+  }
+  /* line 11, /Users/patrick/Entwicklung/mupat/yantre/less/options.less */
+  to {
+    transform: rotate(360deg);
+  }
+}
+/* line 16, /Users/patrick/Entwicklung/mupat/yantre/less/options.less */
+#options {
+  width: 350px;
+  height: 0;
+  position: absolute;
+  left: calc(50% - 175px);
+  top: 0;
+  background: -webkit-gradient(linear, left top, left bottom, from(#ffffff), to(#e6e6e6));
+  box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.4);
+  border-radius: 0 0 6px 6px;
+  transform: translateY(-110%);
+  transition: transform 0.5s ease-out;
+  z-index: 9999;
+  -webkit-animation: hideOnStart 0 linear 0.7s infinite alternate;
+}
+@-webkit-keyframes hideOnStart {
+  /* line 31, /Users/patrick/Entwicklung/mupat/yantre/less/options.less */
+  from {
+    height: 0;
+  }
+  /* line 32, /Users/patrick/Entwicklung/mupat/yantre/less/options.less */
+  to {
+    height: 150;
+  }
+}
+/* line 35, /Users/patrick/Entwicklung/mupat/yantre/less/options.less */
+#options.show {
+  transform: translateY(0%);
 }
